--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "mycareer-front": {
+        "mycareerfront": {
             "projectType": "application",
             "schematics": {},
             "root": "",
@@ -16,7 +16,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/mycareer-front",
+                        "outputPath": "dist/mycareerfront",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
@@ -61,18 +61,18 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "mycareer-front:build"
+                        "browserTarget": "mycareerfront:build"
                     },
                     "configurations": {
                         "production": {
-                            "browserTarget": "mycareer-front:build:production"
+                            "browserTarget": "mycareerfront:build:production"
                         }
                     }
                 },
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "mycareer-front:build"
+                        "browserTarget": "mycareerfront:build"
                     }
                 },
                 "test": {
@@ -109,16 +109,16 @@
                     "builder": "@angular-devkit/build-angular:protractor",
                     "options": {
                         "protractorConfig": "e2e/protractor.conf.js",
-                        "devServerTarget": "mycareer-front:serve"
+                        "devServerTarget": "mycareerfront:serve"
                     },
                     "configurations": {
                         "production": {
-                            "devServerTarget": "mycareer-front:serve:production"
+                            "devServerTarget": "mycareerfront:serve:production"
                         }
                     }
                 }
             }
         }
     },
-    "defaultProject": "mycareer-front"
+    "defaultProject": "mycareerfront"
 }
